[gd_scene load_steps=12 format=3 uid="uid://3wuipg2mc2w7"]

[ext_resource type="Texture2D" uid="uid://dghxv0cwhrhp1" path="res://images/propias/Tests/vector_style5.png" id="1_uxpln"]
[ext_resource type="Script" path="res://images/propias/Tests/Menu.gd" id="2_lqlbs"]
[ext_resource type="Texture2D" uid="uid://dvrf51ht5fwud" path="res://images/propias/Mapa_assets/Puntuacion/All.png" id="3_r61q7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xt18h"]
texture = ExtResource("1_uxpln")
separation = Vector2i(0, 8)
texture_region_size = Vector2i(32, 30)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/next_alternative_id = 2
5:2/0 = 0
6:2/next_alternative_id = 2
6:2/0 = 0
6:2/1 = 1
6:2/1/modulate = Color(1, 0, 1, 1)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0

[sub_resource type="TileSet" id="TileSet_wjcns"]
tile_size = Vector2i(36, 35)
sources/0 = SubResource("TileSetAtlasSource_xt18h")

[sub_resource type="AtlasTexture" id="AtlasTexture_of201"]
atlas = ExtResource("3_r61q7")
region = Rect2(288, 211, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7tb3"]
atlas = ExtResource("3_r61q7")
region = Rect2(480, 211, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_apylx"]
atlas = ExtResource("3_r61q7")
region = Rect2(432, 211, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2r2v"]
atlas = ExtResource("3_r61q7")
region = Rect2(384, 211, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h4yf"]
atlas = ExtResource("3_r61q7")
region = Rect2(336, 211, 48, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_38lnv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_of201")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7tb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apylx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2r2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h4yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of201")
}],
"loop": false,
"name": &"loading",
"speed": 1.0
}]

[node name="Main" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 323)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(76, 73)
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_wjcns")
format = 2
layer_0/name = "Revealed"
layer_0/z_index = 5
layer_1/name = "Hidden"
layer_1/tile_data = PackedInt32Array()
script = ExtResource("2_lqlbs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="score_label" type="Label" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -347.0
offset_top = -123.0
offset_bottom = 28.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 40
vertical_alignment = 1

[node name="turns_label" type="Label" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -16.0
offset_right = -5.0
offset_bottom = 135.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 40
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.25

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(831, 445)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_38lnv")
animation = &"loading"
frame = 4
frame_progress = 1.0

[connection signal="timeout" from="Timer" to="TileMap" method="_on_hover_timeout"]
